[package]
authors = ["me@atticus.pw"]
edition = "2021"
name    = "vision"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
core-graphics2 = "0.3.2"
cocoa = "0.25.0"
objc = "0.2.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
